<resources>
    <string name="app_name">Melotunes</string>
    <string name="Login">Login</string>
    <string name="phone">Enter your phone number</string>
    <string name="password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Enter your name</string>
    <string name="register">Register</string>
    <string name="music">Music</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="home">Home</string>
    <string name="playlist">Playlist</string>
    <string name="donate">Donate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_songs">Upload Songs</string>
    <string name="upload">Upload</string>
</resources>