<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Music">

    <ScrollView
        android:background="@drawable/main_bg"
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/musicll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:gravity="center"
                android:textColor="@color/teal_200"
                android:text="@string/music"
                android:textSize="48sp" />

            <Button
                android:id="@+id/offline"
                android:layout_width="243dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/offline"
                android:textSize="34sp" />

            <Button
                android:id="@+id/online"
                android:layout_width="243dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/online"
                android:textSize="34sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>