<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE9E7"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:background="@drawable/main_bg"
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="730dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginBottom="30sp"
            android:gravity="center"
            android:text="Create Account"
            android:textColor="@color/teal_200"
            android:textSize="48sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_phoneno"
            android:layout_width="match_parent"
            android:maxLength="10"
            android:layout_height="101dp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="#9C27B0"
            android:ems="10"
            android:gravity="center"
            android:textColor="@color/white"
            android:textColorHint="#BDB4B4"
            android:inputType="textPersonName"
            android:hint="@string/phone"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="#9D26B1"
            android:ems="10"
            android:gravity="center"
            android:textColor="@color/white"
            android:textColorHint="#BDB4B4"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="#9C27B0"
            android:ems="10"
            android:textColor="@color/white"
            android:textColorHint="#BDB4B4"
            android:gravity="center"
            android:hint="@string/password"
            android:textSize="24sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/register"
            android:layout_width="353dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/teal_200"
            android:text="@string/register"
            android:textSize="34sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>