<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:background="@drawable/main_bg"
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginBottom="30sp"
                android:gravity="center"
                android:text="@string/Login"
                android:textColor="@color/teal_200"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_phoneno"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_marginBottom="30sp"
                android:backgroundTint="#9C27B0"
                android:ems="10"

                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:textColor="@color/white"
                android:textColorHint="#BDB4B4"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginBottom="70sp"
                android:backgroundTint="#9C27B0"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="#BDB4B4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="353dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Login"
                android:textColor="@color/black"
                android:background="@color/teal_200"
                android:textSize="34sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>